# luna-studio

./: .build.cfg  .build.config  .dockerignore  .drone.sec  .drone.yml  .gitignore  .gitmodules  .jshintrc  .stylish-haskell.yaml  AUTHORS  CHANGELOG.md  Dockerfile  FOLDER_LAYOUT  Flowbox.Graphics.Mockup  Guardfile  Luna.Target.HS.Core  Main.hs  Main.luna  README  README.md  README.rst  Setup.hs  Z3.hs  accelerate-thrust.tcabal  batch-lib-file-manager.cabal  batch-lib-project-manager-api.cabal  batch-lib-project-manager.cabal  batch-lib-project-manager.tcabal  batch-plugin-bus-logger.tcabal  batch-plugin-file-manager.cabal  batch-plugin-interpreter-api.cabal  batch-plugin-interpreter-api.tcabal  batch-plugin-interpreter.cabal  batch-plugin-interpreter.tcabal  batch-plugin-parser.tcabal  batch-plugin-plugin-manager.cabal  batch-plugin-project-manager.cabal  batch-plugin-project-manager.tcabal  batch-plugin-s3-file-manager.cabal  batch-plugin-s3-file-manager.tcabal  (+116 more)
asd/: name.cabal
asd/src/: Main.hs
libs/batch/: AUTHORS  LICENSE  flowbox-batch.cabal  flowbox-batch.tcabal
libs/batch/batch/: Setup.hs  flowbox-batch.cabal  flowbox-batch.tcabal
libs/batch/batch-protobuf/: flowbox-batch-protobuf.cabal
libs/batch/batch/src/Flowbox/Batch/: Batch.hs  Config.hs
libs/batch/batch/src/proto/: file-system.proto  project.proto
libs/batch/batch/test/: Main.hs  Spec.hs
libs/batch/plugins/file-manager/: batch-lib-file-manager.cabal  batch-lib-file-manager.tcabal
libs/batch/plugins/file-manager/src/proto/: file-manager.proto
libs/batch/plugins/luna-empire/: batch-lib-luna-empire.tcabal  package.yaml
libs/batch/plugins/luna-empire/src/Empire/: Config.hs  Env.hs  Handlers.hs  Logger.hs  ResultSaver.hs  Server.hs  Utils.hs  Version.hs
libs/batch/plugins/project-manager/: batch-lib-project-manager.cabal  batch-lib-project-manager.tcabal
libs/batch/plugins/project-manager-api/: batch-lib-project-manager-api.cabal  batch-lib-project-manager-api.tcabal
libs/batch/plugins/project-manager-api/src/proto/: project-manager.proto
libs/batch/plugins/project-manager/src/proto/: project-manager.proto
libs/batch/plugins/request-monitor/: package.yaml
libs/batch/plugins/request-monitor/src/Empire/: Env.hs  Monitor.hs
libs/batch/plugins/ur-manager/: batch-lib-ur-manager.cabal  batch-lib-ur-manager.tcabal
libs/batch/plugins/ur-manager/src/proto/: urm.proto
libs/batch/proto/: file-system.proto  project.proto
libs/batch/src/Flowbox/Batch/: Batch.hs  Config.hs  Main.hs
libs/batch/src/Flowbox/Batch/FileSystem/: Item.hs
libs/batch/src/Flowbox/Batch/GraphView/: Defaults.hs  EdgeView.hs  GraphView.hs  PortDescriptor.hs  Value.hs
libs/batch/src/Flowbox/Batch/Handler/: AST.hs  Common.hs  Default.hs  FileSystem.hs  Graph.hs  Library.hs  Maintenance.hs  NodeDefault.hs  Parser.hs  Process.hs  Project.hs  Properties.hs
libs/batch/src/Flowbox/Batch/Handlers/: Common.hs  Defaults.hs  Defs.hs  FileSystem.hs  Graph.hs  Libs.hs  Maintenance.hs  Projects.hs
libs/batch/src/Flowbox/Batch/Process/: Handle.hs  Map.hs  Process.hs  State.hs
libs/batch/src/Flowbox/Batch/Project/: Project.hs  ProjectManager.hs
libs/batch/src/Flowbox/Batch/Samples/: Modules.hs  Nodes2Ast.hs  Std.hs
libs/batch/src/Flowbox/Batch/Tools/: Definition2AST.hs
libs/batch/src/proto/: project.proto
libs/batch/tests/: Main.hs
libs/convert/: convert.cabal
libs/convert/Data/: Convert.hs
libs/convert/Data/Convert/: Errors.hs  Instances.hs
libs/convert/Data/Convert/Instances/: Map.hs  Num.hs  TH.hs  Text.hs
libs/convert/utils/: genCinstances.hs
libs/lunastdlib/: flowbox-luna-stdlib.cabal
libs/lunastdlib/old/: Main.hs
libs/lunastdlib/old/Common'/: C''add.hs  C''select1.hs  C''select6.hs  C''select8.hs  C''select9.hs  C''z'getter.hs
libs/lunastdlib/old/Flowbox'/: Core.hs
libs/lunastdlib/old/Flowbox'/Data/NTuple/: Select.hs
libs/lunastdlib/old/Flowbox'/Data/Tuple/: Select.hs
libs/lunastdlib/old/Flowbox'/System/: Console.hs
libs/lunastdlib/old/Flowbox'/TH/: Inst.hs
libs/lunastdlib/old/HWorkspace'/: Vector.hs
libs/lunastdlib/old/Workspace'/: Vector.hs
libs/lunastdlib/old/Workspace'.tests/: Vector.hs
libs/lunastdlib/old/Workspace'/Vector/: U'incx.hs
libs/lunastdlib/src/Flowbox/Luna/FClasses/: C''add'.hs  C''incx'.hs  C''print'.hs  C''select0'.hs  C''select1'.hs  C''select10'.hs  C''select2'.hs  C''select3'.hs  C''select4'.hs  C''select5'.hs  C''select6'.hs  C''select7'.hs  C''select8'.hs  C''select9'.hs  C''x'getter'.hs  C''x'setter'.hs  C''y'getter'.hs  C''y'setter'.hs  C''z'getter'.hs  C''z'setter'.hs  U'add.hs  U'incx.hs  U'init.hs  U'print.hs  U'select0.hs  U'select1.hs  U'select10.hs  U'select2.hs  U'select3.hs  U'select4.hs  U'select5.hs  U'select6.hs  U'select7.hs  U'select8.hs  U'select9.hs  U'x'getter.hs  U'x'setter.hs  U'y'getter.hs  U'y'setter.hs  U'z'getter.hs  (+2 more)
lunalib/: Main.hs  lunastdlib.cabal
lunalib/Common'/: C''select10.hs  C''select2.hs  C''select4.hs  C''select5.hs  C''select7.hs  C''y'getter.hs  C'getx.hs  C'select0.hs  C'select1.hs  C'select2.hs  C'select3.hs  C'select4.hs  C'select5.hs  C'setx.hs  __generator.hs
lunalib/Flowbox'/: Common.hs  Core.hs
lunalib/Flowbox'/Data/Tuple/: Select.hs
lunalib/Flowbox'/TH/: Inst.hs
lunalib/Flowbox'/Tools/: MkTuple.hs
lunalib/HWorkspace'/Vector/: U'len.hs
lunalib/Std/Math/: Vector.luna
lunalib/Workspace'/: Vector.hs
lunalib/Workspace'.tests/: Vector.hs
lunalib/Workspace'.tests/Vector/: U'incx.hs
lunalib/Workspace'/Vector/: U'incx.hs
lunalib/old/Common'/: C''incx.hs  C''select0.hs  C''select3.hs  C''z'setter.hs
lunalib/src/Flowbox/: Common.hs  Core.hs
lunalib/src/Flowbox/Data/NTuple/: Select.hs
lunalib/src/Flowbox/Data/Tuple/: Select.hs
lunalib/src/Flowbox/System/: Console.hs
lunalib/src/Flowbox/TH/: Inst.hs
runtime/: runtime-deps.cabal  stack.yaml
samples/TestProject/libs/Workspace/: workspace.cabal
samples/TestProject/libs/Workspace/src/: Main.hs
tools/batch-srv/: flowbox-batch-srv.cabal  flowbox-batch-srv.tcabal
tools/batch-srv/src/: Main.hs
tools/batch-srv/src/proto/: server-api.proto
(+6447 files in other folders)
