name:                gui
version:             0.1.0.0
synopsis:            Flowbox Data GUI
-- description:
homepage:            data.flowbox.io
--license:             AllRightsReserved
--license-file:        LICENSE
author:              Flowbox Data
maintainer:          data@flowbox.io
-- copyright:
category:            drag and drop test, all reactive
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable gui
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  default-extensions:   DoAndIfThenElse
                      , NoImplicitPrelude
                      , TemplateHaskell
                      , DeriveGeneric
                      , StandaloneDeriving
                      , FlexibleContexts
                      , MultiParamTypeClasses
                      , DefaultSignatures
                      , DeriveFunctor
                      , DeriveTraversable
                      , DeriveFoldable
                      , FlexibleInstances
                      , LambdaCase
                      , ConstraintKinds
                      , GeneralizedNewtypeDeriving
                      , DeriveDataTypeable
                      , ScopedTypeVariables

  build-depends:       base >=4.7 && <4.8
                     , data-default
                     , ghcjs-base
                     , ghcjs-dom
                     , reactive-banana
                     , text
                     , transformers
                     , mtl
                     , lens
                     , containers
                     , fgl
                     , random
                     , convertible
                     , pretty-show
  hs-source-dirs:      app/src
  default-language:    Haskell2010

