Name:           flowbox
Version:        0.1
Cabal-Version:  >= 1.8
License-file:   LICENSE
Author:         Flowbox <contact@flowbox.io>
Maintainer:     Flowbox <contact@flowbox.io>
Build-Type:     Simple

Flag Debug
  Description: Enable debug support
  Default:     False


Library
  Hs-Source-Dirs: tools/lunac/src,
                  tools/lunac/gen-hs
  if flag(debug)
    GHC-Options:  -csacc
  GHC-Options:    -Wall 
                  -- -F -pgmF ./util/preprocessors/imports.py
  Extensions:     DoAndIfThenElse
                  ForeignFunctionInterface
                  MultiParamTypeClasses
  Exposed-modules:
                  Luna.Data.Graph,
                  Luna.Data.List,
                  Luna.Lib.Edge,
                  Luna.Lib.LibManager,
                  Luna.Lib.Library,
                  Luna.Network.Def.DefManager,
                  Luna.Network.Def.Edge,
                  Luna.Network.Def.Definition,
                  Luna.Network.Graph.DefaultValue,
                  Luna.Network.Graph.Edge,
                  Luna.Network.Graph.Graph,
                  Luna.Network.Graph.Node
                  Luna.Network.Path.Import,
                  Luna.Network.Path.Path,
                  Luna.Network.Attributes,
                  Luna.Network.Flags,
                  Luna.Project,
                  Luna.ProjectManager,
                  Luna.Samples.Packages,
                  Luna.System.UniPath,
                  Luna.Tools.Conversion,
                  Luna.Tools.Conversion.Attrs,
                  Luna.Tools.Conversion.Defs,
                  Luna.Tools.Conversion.Graph,
                  Luna.Tools.Conversion.Libs,
                  Luna.Tools.Conversion.Types,
                  Luna.Tools.Graphviz,              
                  Luna.Tools.TypeChecker,
                  Luna.Type.Type,
                  Attrs_Consts,
                  Attrs_Types,
                  Defs_Consts,
                  Defs_Types,
                  Graph_Consts,
                  Graph_Types,
                  Libs_Consts,
                  Libs_Types,
                  Projects_Consts,
                  Projects_Types,
                  Types_Consts,
                  Types_Types

  
  Build-Depends:  base, 
                  bytestring,
                  cereal,
                  containers,
                  directory,
                  fgl,
                  graphviz,
                  hashable,
                  MissingH,
                  regex-posix,
                  split,
                  text,
                  thrift,
                  unordered-containers,
                  vector


Executable lunac 
  Main-Is:        Main.hs
  Hs-Source-Dirs: tools/lunac/src

  if flag(debug)
    GHC-Options:  -csacc
  GHC-Options:    -Wall 

  Extensions:     DoAndIfThenElse
                  MultiParamTypeClasses
  Build-Depends:  base,
                  cereal,
                  containers,
                  directory,
                  fgl,
                  flowbox,
                  MissingH,
                  mtl,
                  regex-posix,
                  split,
                  text,
                  thrift,
                  unordered-containers,
                  vector


Executable batch
  Hs-Source-Dirs: tools/batch/src
                  tools/batch/gen-hs
  Main-Is:        Main.hs

  GHC-Options:    -Wall 

  Extensions:     FlexibleInstances,
                  TypeSynonymInstances

  Build-Depends:  base,
                  bytestring,
                  containers,
                  flowbox,
                  hashable,
                  network,
                  text,
                  thrift,
                  unordered-containers,
                  vector
