Name:           flowbox-lunac
Version:        0.1
Cabal-Version:  >= 1.8
License-file:   LICENSE
Author:         Flowbox <contact@flowbox.io>
Maintainer:     Flowbox <contact@flowbox.io>
Build-Type:     Simple

Flag Debug
  Description: Enable debug support
  Default:     False


Executable lunac 
  Main-Is:        Flowbox/Lunac/Main.hs
  Hs-Source-Dirs: src

  if flag(debug)
    GHC-Options:  -csacc
  GHC-Options:    -Wall 

  Extensions:     DoAndIfThenElse
                  MultiParamTypeClasses
  Build-Depends:  base,
                  cereal,
                  containers,
                  directory,
                  fgl,
                  flowbox-luna,
                  MissingH,
                  mtl,
                  regex-posix,
                  split,
                  text,
                  thrift,
                  unordered-containers,
                  vector
