Name:              name
Version:           1
Cabal-Version:     >= 1.8
Build-Type:        Simple

Executable name
    Main-Is:           Main.hs
    Hs-Source-Dirs:    src
    GHC-Options:       -O0
    CPP-Options:       
    Extensions:        
    Build-Depends:     base,
                  flowbox-graphics,
                  luna-target-hs,
                  template-haskell,
                  flowboxM-stdlib
