Name:              name
Version:           1
Cabal-Version:     >= 1.8
Build-Type:        Simple

Executable name
    Main-Is:           Main.hs
    Hs-Source-Dirs:    src
    GHC-Options:       -threaded -Odph -optlo-O3
    CC-Options:        
    Extensions:        
    Build-Depends:     base,
                  containers,
                  flowbox-graphics,
                  luna-target-hs,
                  template-haskell,
                  accelerate,
                  flowboxM-stdlib
