name:                runtime-deps
version:             0.1.0.0
synopsis:            NodeLabDeps
author:              New Byte Order
maintainer:          contact@nodelab.io
build-type:          Simple
cabal-version:       >=1.22

executable nodelab
  main-is:             Main.hs
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010


