Name:               flowbox-batch
Version:            0.1
Cabal-Version:      >= 1.8
License-file:       LICENSE
Author:             Flowbox <contact@flowbox.io>
Maintainer:         Flowbox <contact@flowbox.io>
Build-Type:         Simple

Flag Debug
  Description:      Enable debug support
  Default:          False


Library
    Hs-Source-Dirs: src
                    src/Flowbox/Batch/Tools/Serialize/Thrift/Generated

    GHC-Options:    -Wall 

    Extensions:     FlexibleInstances,
                    TypeSynonymInstances
 
    Exposed-modules:
                    Flowbox.Batch.Batch
                    Flowbox.Batch.Project.Project
                    Flowbox.Batch.Project.ProjectManager
                    Flowbox.Batch.Tools.Serialize.Thrift.Conversion.Projects
                    Projects_Consts
                    Projects_Types

    Build-Depends:  base,
                    bytestring,
                    containers,
                    directory,
                    flowbox-luna,
                    flowbox-utils,
                    hashable,
                    network,
                    text,
                    thrift,
                    unordered-containers,
                    vector

