Name: convert
Version: 0.1
License: Apache-2.0
Maintainer: Wojciech Danilo
Author: Wojciech Danilo
Copyright: Copyright (c) 2015 Wojciech Danilo

Category: Data

Stability: Stable
Build-Type: Simple

Cabal-Version:  >= 1.8

-- source-repository head
--   type: git
--   location: <github>

flag dump-splices
  default: False
  manual: True

library
  Build-Depends: base>=3 && <5,
                 old-time,
                 time>=1.1.3,
                 bytestring >= 0.10.2,
                 containers,
                 old-locale,
                 mtl,
                 text >= 0.8,
                 either,
                 template-haskell,
                 lens

  GHC-Options: -O2 -Wall -fno-warn-orphans


  Exposed-Modules: Data.Convert,
                   Data.Convert.Base,
                   Data.Convert.Bound,
                   Data.Convert.Errors,
                   Data.Convert.Instances,
                   Data.Convert.Instances.Map,
                   Data.Convert.Instances.Num,
                   Data.Convert.Instances.Text,
                   Data.Convert.Instances.TH

  Extensions: MultiParamTypeClasses,
              UndecidableInstances, FlexibleInstances,
              FlexibleContexts, CPP



