Name:               flowbox-batch-srv
Version:            0.1
Cabal-Version:      >= 1.8
License-file:       LICENSE
Author:             Flowbox <contact@flowbox.io>
Maintainer:         Flowbox <contact@flowbox.io>
Build-Type:         Simple

Flag Debug
    Description:    Enable debug support
    Default:        False


Executable batch-srv
    Hs-Source-Dirs: src
                    src/Flowbox/Batch/Server/Thrift/Generated
    Main-Is:        Flowbox/Batch/Server/Main.hs

    GHC-Options:    -Wall 

    Extensions:     FlexibleInstances
                    TypeSynonymInstances

    Build-Depends:  base,
                    bytestring,
                    containers,
                    flowbox-batch,
                    flowbox-luna,
                    hashable,
                    network,
                    text,
                    thrift >= 0.9,
                    unordered-containers,
                    vector
