Name:           workspace
Version:        0.1
Cabal-Version:  >= 1.8
Author:         Flowbox <contact@flowbox.io>
Maintainer:     Flowbox <contact@flowbox.io>
Build-Type:     Simple

Executable workspace
  Main-Is:        Main.hs
  Hs-Source-Dirs: src

  GHC-Options:    -Wall 

  Extensions:     DoAndIfThenElse
                  MultiParamTypeClasses
  Build-Depends:  base,
                  flowbox-luna-stdlib